# universidad

Analisis numerico/PrimerCorte/: biseccion2.m  biseccion3.m  falsaPosicion.m  falsaPosicion2.m  metodoGrafico.m  newton.m  puntoFijo.m  secante.m
Arquitectura de Computador/: CodigoPrograma  OperacionesMonociclo.docx
Bases de datos/: EntregaTriggers.sql  Taller Indices.docx  TwitterCreate.sql  consultas.sql  tablaseinserts.sql
Desarrollo web/: apiMiniAmazon.py  scriptbdNeo4j.py
Escritos/: Comportamiento del consumidor.docx  Discutiendo sobre lo bello.docx  El amante y su amado.docx  Ensaro sobre la inteligencia Artificial.docx  Estetica Historia y fundamentos.docx  Existen diferencias entre estética y critica del arte.docx  Habitos y costumbres.docx  Hadoop La gran herramienta del big data.docx  Interpretacion obra de arte.docx  La inteligencia artificial en los seres humanos.docx  RUP.docx  Reproduccion tecnica del arte.docx  Teologia del mercado.docx
Inteligencia Artificial/: Proyecto de curso.ipynb
Presentaciones/: Comportamiento del consumidor.pptx  Cultivos hidroponicos.pptx  Gestion Organizacional.pptx  Patrones de diseño Builder.pptx  Scrum.pptx  Self-driving cars.pptx  Teclado.pptx  Tipos de memoria.pptx  css.pptx
Programacion Orientada a Objetos/Estructura de datos/proyectofinal/: CMakeLists.txt  Makefile  ld  listasDobles2.cpp  listasDobles2.h  main.cpp  pilas.h  programa  taller4.cpp  taller4.h
Python/: Descomposicion en Primos.py  ProyectoMatematicasDiscretas.py  caballos.py  contains.py  factorial.py  fpADA.py  tarea2discretas.py
(+325 files in other folders)
